<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RoboRoachMainActivity">

    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="102"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="103"
        app:showAsAction="ifRoom|withText"/>
</menu>
