<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:fontFamily="@font/comic_book"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.backyardbrains.roboroach.RoboRoachActivity"
            tools:ignore="MergeRootFrame">

            <ImageView
                android:id="@+id/imageRoach"
                android:layout_width="120dp"
                android:layout_height="306dp"
                android:layout_gravity="center"
                android:src="@drawable/roach"
                tools:ignore="ContentDescription"/>

            <ImageView
                android:id="@+id/imageBackpack"
                android:layout_width="127dp"
                android:layout_height="172dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/backpack"
                android:visibility="invisible"
                tools:ignore="ContentDescription"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textGoLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/rr_goleft"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:fontFamily="@font/comic_book"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textGoRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/rr_goright"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:fontFamily="@font/comic_book"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:fontFamily="@font/comic_book"
                tools:text="RoboRoach configuration text"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblGain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="Gain"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <SeekBar
                    android:id="@+id/sbGain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="Duration"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <SeekBar
                    android:id="@+id/sbDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/swRandomMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Random Mode"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="Frequency"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <SeekBar
                    android:id="@+id/sbFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblPulseWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="Pulse Width"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <SeekBar
                    android:id="@+id/sbPulseWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSaveSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="OK"/>
            </TableRow>
        </LinearLayout>
    </ViewFlipper>
</LinearLayout>